# sot-oscar

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
doc/: Doxyfile.extra.in  collision.tex
python/jumble/falling/: capture-point-new.py  capture-point-task.py  capture-point.py  falling.py
python/jumble/falling/tests/test1/: capture-point.py  meta_tasks_tools.py
python/jumble/falling/tests/test2/: capture-point.py  meta_tasks_tools.py
python/jumble/falling/tests/test3/noCP/: capture-point.py  meta_tasks_tools.py
python/jumble/falling/tests/test3/withCP/: capture-point.py
python/jumble/walking/finals/: contact_handler.py  contact_handler_new.py  dynwalk.py  dynwalk_contactPointsPlane.py  dynwalk_taskPP.py
python/jumble/walking/tests/: dynwalk_contactPoints.py
python/unitTests/: basicMove1.py
src/: CMakeLists.txt  fcl-box-mesh-collision.cpp  fcl-box-mesh-collision.h  foot-collision-grid.cpp  foot-collision-grid.h  solver-motion-reduced.cpp  solver-motion-reduced.h  task-passing-point.cpp  task-passing-point.h  velocity-control.cpp  velocity-control.h  velocity-correction.cpp  velocity-correction.h
src/dynamic_graph/sot/oscar/: __init__.py  meta_task_passing_point.py  meta_tasks_tools.py  zmp_estimator.py
unitTesting/: CMakeLists.txt  testCGALConvexHull.cpp  testCollisionBoxMesh.cpp  testCollisionBoxMeshConvexHull.cpp
